podzielenie misc.* i gadu.* na mniejsze
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3469 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/kadu/Makefile.am
+++ b/kadu/Makefile.am
@@ -15,11 +15,18 @@ dnshandler.cpp \
 emoticons.cpp \
 expimp.cpp \
 gadu.cpp \
+gadu-private.cpp \
+gadu_images_manager.cpp \
+gadu_rich_text.cpp \
 groups_manager.cpp \
 history.cpp \
+html_document.cpp \
+http_client.cpp \
+icons_manager.cpp \
 ignore.cpp \
 kadu.cpp \
 kadu_splitter.cpp \
+kadu_text_browser.cpp \
 main.cpp \
 message_box.cpp \
 misc.cpp \
@@ -29,6 +36,7 @@ personal_info.cpp \
 search.cpp \
 status.cpp \
 tabbar.cpp \
+themes.cpp \
 userbox.cpp \
 userinfo.cpp \
 userlist.cpp \
@@ -55,11 +63,18 @@ dnshandler.h \
 emoticons.h \
 expimp.h \
 gadu.h \
+gadu-private.h \
+gadu_images_manager.h \
+gadu_rich_text.h \
 groups_manager.h \
 history.h \
+html_document.h \
+http_client.h \
+icons_manager.h \
 ignore.h \
 kadu.h \
 kadu_splitter.h \
+kadu_text_browser.h \
 message_box.h \
 misc.h \
 modules.h \
@@ -68,6 +83,7 @@ personal_info.h \
 search.h \
 status.h \
 tabbar.h \
+themes.h \
 userbox.h \
 userinfo.h \
 userlist.h \
@@ -88,10 +104,14 @@ moc/dnshandler_moc.cpp \
 moc/emoticons_moc.cpp \
 moc/expimp_moc.cpp \
 moc/gadu_moc.cpp \
+moc/gadu-private_moc.cpp \
 moc/groups_manager_moc.cpp \
 moc/history_moc.cpp \
+moc/http_client_moc.cpp \
+moc/icons_manager_moc.cpp \
 moc/ignore_moc.cpp \
 moc/kadu_moc.cpp \
+moc/kadu_text_browser_moc.cpp \
 moc/message_box_moc.cpp \
 moc/misc_moc.cpp \
 moc/modules_moc.cpp \
@@ -100,6 +120,7 @@ moc/personal_info_moc.cpp \
 moc/search_moc.cpp \
 moc/status_moc.cpp \
 moc/tabbar_moc.cpp \
+moc/themes_moc.cpp \
 moc/userbox_moc.cpp \
 moc/userinfo_moc.cpp \
 moc/userlist_moc.cpp \
@@ -123,11 +144,18 @@ obj/dnshandler.$(OBJEXT) \
 obj/emoticons.$(OBJEXT) \
 obj/expimp.$(OBJEXT) \
 obj/gadu.$(OBJEXT) \
+obj/gadu-private.$(OBJEXT) \
+obj/gadu_images_manager.$(OBJEXT) \
+obj/gadu_rich_text.$(OBJEXT) \
 obj/groups_manager.$(OBJEXT) \
 obj/history.$(OBJEXT) \
+obj/html_document.$(OBJEXT) \
+obj/http_client.$(OBJEXT) \
+obj/icons_manager.$(OBJEXT) \
 obj/ignore.$(OBJEXT) \
 obj/kadu.$(OBJEXT) \
 obj/kadu_splitter.$(OBJEXT) \
+obj/kadu_text_browser.$(OBJEXT) \
 obj/main.$(OBJEXT) \
 obj/message_box.$(OBJEXT) \
 obj/misc.$(OBJEXT) \
@@ -137,6 +165,7 @@ obj/personal_info.$(OBJEXT) \
 obj/search.$(OBJEXT) \
 obj/status.$(OBJEXT) \
 obj/tabbar.$(OBJEXT) \
+obj/themes.$(OBJEXT) \
 obj/userbox.$(OBJEXT) \
 obj/userinfo.$(OBJEXT) \
 obj/userlist.$(OBJEXT) \
@@ -155,10 +184,14 @@ obj/dnshandler_moc.$(OBJEXT) \
 obj/emoticons_moc.$(OBJEXT) \
 obj/expimp_moc.$(OBJEXT) \
 obj/gadu_moc.$(OBJEXT) \
+obj/gadu-private_moc.$(OBJEXT) \
 obj/groups_manager_moc.$(OBJEXT) \
 obj/history_moc.$(OBJEXT) \
+obj/http_client_moc.$(OBJEXT) \
+obj/icons_manager_moc.$(OBJEXT) \
 obj/ignore_moc.$(OBJEXT) \
 obj/kadu_moc.$(OBJEXT) \
+obj/kadu_text_browser_moc.$(OBJEXT) \
 obj/message_box_moc.$(OBJEXT) \
 obj/misc_moc.$(OBJEXT) \
 obj/modules_moc.$(OBJEXT) \
@@ -167,6 +200,7 @@ obj/personal_info_moc.$(OBJEXT) \
 obj/search_moc.$(OBJEXT) \
 obj/status_moc.$(OBJEXT) \
 obj/tabbar_moc.$(OBJEXT) \
+obj/themes_moc.$(OBJEXT) \
 obj/userbox_moc.$(OBJEXT) \
 obj/userinfo_moc.$(OBJEXT) \
 obj/userlist_moc.$(OBJEXT) \
