--- a/kadu/Makefile.in
+++ b/kadu/Makefile.in
@@ -188,6 +188,8 @@ misc.cpp \
 modules.cpp \
 pending_msgs.cpp \
 personal_info.cpp \
+protocol.cpp \
+protocols_manager.cpp \
 search.cpp \
 status.cpp \
 tabbar.cpp \
@@ -235,6 +237,8 @@ misc.h \
 modules.h \
 pending_msgs.h \
 personal_info.h \
+protocol.h \
+protocols_manager.h \
 search.h \
 status.h \
 tabbar.h \
@@ -273,6 +277,8 @@ moc/misc_moc.cpp \
 moc/modules_moc.cpp \
 moc/pending_msgs_moc.cpp \
 moc/personal_info_moc.cpp \
+moc/protocol_moc.cpp \
+moc/protocols_manager_moc.cpp \
 moc/search_moc.cpp \
 moc/status_moc.cpp \
 moc/tabbar_moc.cpp \
@@ -319,6 +325,8 @@ obj/misc.$(OBJEXT) \
 obj/modules.$(OBJEXT) \
 obj/pending_msgs.$(OBJEXT) \
 obj/personal_info.$(OBJEXT) \
+obj/protocol.$(OBJEXT) \
+obj/protocols_manager.$(OBJEXT) \
 obj/search.$(OBJEXT) \
 obj/status.$(OBJEXT) \
 obj/tabbar.$(OBJEXT) \
@@ -354,6 +362,8 @@ obj/misc_moc.$(OBJEXT) \
 obj/modules_moc.$(OBJEXT) \
 obj/pending_msgs_moc.$(OBJEXT) \
 obj/personal_info_moc.$(OBJEXT) \
+obj/protocol_moc.$(OBJEXT) \
+obj/protocols_manager_moc.$(OBJEXT) \
 obj/search_moc.$(OBJEXT) \
 obj/status_moc.$(OBJEXT) \
 obj/tabbar_moc.$(OBJEXT) \
@@ -430,11 +440,13 @@ am__depfiles_maybe = depfiles
 @AMDEP_TRUE@	./$(DEPDIR)/main.Po ./$(DEPDIR)/message_box.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/misc.Po ./$(DEPDIR)/modules.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/pending_msgs.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/personal_info.Po ./$(DEPDIR)/search.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/status.Po ./$(DEPDIR)/tabbar.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/themes.Po ./$(DEPDIR)/updates.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/userbox.Po ./$(DEPDIR)/usergroup.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/userinfo.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/personal_info.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/protocol.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/protocols_manager.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/search.Po ./$(DEPDIR)/status.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/tabbar.Po ./$(DEPDIR)/themes.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/updates.Po ./$(DEPDIR)/userbox.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/usergroup.Po ./$(DEPDIR)/userinfo.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/userlist-private.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/userlist.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/userlistelement.Po
@@ -528,6 +540,8 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/modules.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pending_msgs.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/personal_info.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/protocol.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/protocols_manager.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/search.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/status.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/tabbar.Po@am__quote@
