tworzenie qm w kadu + make clean usuwa
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3486 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/modules/Makefile.in
+++ b/modules/Makefile.in
@@ -397,6 +397,9 @@ clean-local:
 		for mod_3rdparty in $$MODULE_3RDPARTY; do \
 			$(MAKE) -C $$dir/$$mod_3rdparty clean; \
 		done; \
+		if test -d $$dir/translations; then \
+			rm -f $$dir/translations/*.qm; \
+		fi; \
 	done
 
 $(module_targets):
