poprawiono wykrywanie libexecinfo
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3525 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/configure.ac
+++ b/configure.ac
@@ -38,9 +38,10 @@ AC_DEFUN(CHECK_PTHREAD,
 # $1 - action if successed
 # $2 - action if failed
 AC_DEFUN(TRY_LINK_EXECINFO,[
-	AC_TRY_LINK([],
+	AC_TRY_LINK(
 	[
 		#include <execinfo.h>
+	],[
 		int main()
 		{
 			char* data;
