--- a/modules/Makefile.in
+++ b/modules/Makefile.in
@@ -350,7 +350,7 @@ install-data-local: uninstall-local
 	$(mkinstalldirs) "$(DESTDIR)$(datadir)/kadu/modules/"
 	$(mkinstalldirs) "$(DESTDIR)$(datadir)/kadu/modules/translations/"
 	$(mkinstalldirs) "$(DESTDIR)$(datadir)/kadu/modules/data/"
-	$(mkinstalldirs) "$(DESTDIR)$(datadir)/kadu/modules/bin/"
+	$(mkinstalldirs) "$(DESTDIR)$(libdir)/kadu/modules/bin/"
 	@for dir in $(static_modules) $(shared_modules); do \
 		echo -e "\033[32m>>>\033[0m Installing $$dir module ..."; \
 		$(INSTALL_DATA) $$dir/$$dir.desc "$(DESTDIR)$(datadir)/kadu/modules"; \
@@ -371,24 +371,25 @@ install-data-local: uninstall-local
 		if test -d $$dir/bin; then \
 			for sub_dir in `find $$dir/bin -type d | grep -v /CVS | grep -v /.svn`; do \
 				dst_dir=`echo "$$sub_dir" | sed "s,/bin/,/," | sed "s,/bin$$,,"`; \
-				$(mkinstalldirs) "$(DESTDIR)$(datadir)/kadu/modules/bin/$$dst_dir"; \
+				$(mkinstalldirs) "$(DESTDIR)$(libdir)/kadu/modules/bin/$$dst_dir"; \
 				for new_file in `find $$sub_dir -maxdepth 1 -type f | sed "s/ /_SPACE_/g"`; do \
 					new_file=`echo "$$new_file" | sed "s/_SPACE_/ /g"`; \
-					$(INSTALL_PROGRAM) "$$new_file" "$(DESTDIR)$(datadir)/kadu/modules/bin/$$dst_dir"; \
+					$(INSTALL_PROGRAM) "$$new_file" "$(DESTDIR)$(libdir)/kadu/modules/bin/$$dst_dir"; \
 				done; \
 			done; \
 		fi; \
 		if test -z `expr " $(static_modules) " : ".* \($$dir\) "`; then \
-			$(INSTALL_DATA) $$dir/$$dir.$(SO_EXT) "$(DESTDIR)$(datadir)/kadu/modules/"; \
+			$(INSTALL_DATA) $$dir/$$dir.$(SO_EXT) "$(DESTDIR)$(libdir)/kadu/modules/"; \
 		fi; \
 	done
 
 uninstall-local:
 	rm -f "$(DESTDIR)$(includedir)/kadu/modules"/*.h
 	rm -f "$(DESTDIR)$(datadir)/kadu/modules"/*.desc
-	rm -f "$(DESTDIR)$(datadir)/kadu/modules"/*.$(SO_EXT)
+	rm -f "$(DESTDIR)$(libdir)/kadu/modules"/*.$(SO_EXT)
 	rm -f "$(DESTDIR)$(datadir)/kadu/modules/translations"/*.qm
 	rm -rf "$(DESTDIR)$(datadir)/kadu/modules/data"/*
+	rm -rf "$(DESTDIR)$(libdir)/kadu/modules/bin"/*
 
 clean-local:
 	@for dir in $(static_modules) $(shared_modules); do \
