wyłączamy regenerowanie Makefilei
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/branches/0.4@3538 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/configure.ac
+++ b/configure.ac
@@ -404,6 +404,7 @@ echo " ***************************************"
 AC_CONFIG_SRCDIR([kadu/kadu.cpp])
 AC_CONFIG_AUX_DIR([admin])
 AM_CONFIG_HEADER([kadu-config.h])
+AM_MAINTAINER_MODE
 AC_CANONICAL_SYSTEM
 AM_INIT_AUTOMAKE([kadu-$version],[$version])
 
