--- a/translations/Makefile.in
+++ b/translations/Makefile.in
@@ -78,6 +78,7 @@ DYNAMIC_OPT = @DYNAMIC_OPT@
 GADU_INCLUDES = @GADU_INCLUDES@
 GADU_LIBS = @GADU_LIBS@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
+MAINT = @MAINT@
 MY_SUBDIRS = @MY_SUBDIRS@
 PACKAGE = @PACKAGE@
 PNG_LIBS = @PNG_LIBS@
@@ -113,10 +114,10 @@ DIST_COMMON = Makefile.am Makefile.in
 all: all-am
 
 .SUFFIXES:
-$(srcdir)/Makefile.in:  Makefile.am  $(top_srcdir)/configure.ac $(ACLOCAL_M4)
+$(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ Makefile.am  $(top_srcdir)/configure.ac $(ACLOCAL_M4)
 	cd $(top_srcdir) && \
 	  $(AUTOMAKE) --gnu  translations/Makefile
-Makefile:  $(srcdir)/Makefile.in  $(top_builddir)/config.status
+Makefile: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.in  $(top_builddir)/config.status
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@ $(am__depfiles_maybe)
 uninstall-info-am:
 tags: TAGS
