--- a/kadu/Makefile.in
+++ b/kadu/Makefile.in
@@ -157,6 +157,7 @@ bin_PROGRAMS = kadu
 
 kadu_SOURCES = \
 about.cpp \
+action.cpp \
 chat.cpp \
 chat_manager.cpp \
 chat_manager_slots.cpp \
@@ -208,6 +209,7 @@ kadudir = $(includedir)/kadu
 
 kadu_HEADERS = \
 about.h \
+action.h \
 chat.h \
 chat_manager.h \
 chat_manager_slots.h \
@@ -256,6 +258,7 @@ updates.h
 
 BUILT_SOURCES = \
 moc/about_moc.cpp \
+moc/action_moc.cpp \
 moc/chat_moc.cpp \
 moc/chat_manager_moc.cpp \
 moc/chat_manager_slots_moc.cpp \
@@ -297,6 +300,7 @@ moc/updates_moc.cpp
 
 am_kadu_OBJECTS = \
 obj/about.$(OBJEXT) \
+obj/action.$(OBJEXT) \
 obj/chat.$(OBJEXT) \
 obj/chat_manager.$(OBJEXT) \
 obj/chat_manager_slots.$(OBJEXT) \
@@ -343,6 +347,7 @@ obj/usergroup.$(OBJEXT) \
 obj/userlistelement.$(OBJEXT) \
 obj/updates.$(OBJEXT) \
 obj/about_moc.$(OBJEXT) \
+obj/action_moc.$(OBJEXT) \
 obj/chat_moc.$(OBJEXT) \
 obj/chat_manager_moc.$(OBJEXT) \
 obj/chat_manager_slots_moc.$(OBJEXT) \
@@ -423,8 +428,8 @@ kadu_DEPENDENCIES = $(foreach mod,$(basename \
 DEFAULT_INCLUDES =  -I. -I$(srcdir) -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/admin/depcomp
 am__depfiles_maybe = depfiles
-@AMDEP_TRUE@DEP_FILES = ./$(DEPDIR)/about.Po ./$(DEPDIR)/chat.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/chat_manager.Po \
+@AMDEP_TRUE@DEP_FILES = ./$(DEPDIR)/about.Po ./$(DEPDIR)/action.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/chat.Po ./$(DEPDIR)/chat_manager.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/chat_manager_slots.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/chat_message.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/color_selector.Po \
@@ -515,6 +520,7 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/about.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/action.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/chat.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/chat_manager.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/chat_manager_slots.Po@am__quote@
