--- a/.config
+++ b/.config
@@ -166,6 +166,10 @@ module_autoaway=m
 # Depends: account_management sound hints
 module_config_wizard=m
 
+# Description: Migration utility
+# PL: Narzêdzie do migracji
+module_migration=m
+
 # Description: Autoresponder module
 # PL: Modu³ automatycznej odpowiedzi
 module_autoresponder=m
@@ -269,7 +273,7 @@ module_miastoplusa_sms=n
 
 # Description: Tabbed chat dialog module
 # PL: Modu³ okna rozmowy z zak³adkami
-module_tabs=n 
+module_tabs=n
 
 # Description: Notification by Scroll Lock LED
 # PL: Powiadamiania diod± Scroll Lock
