--- a/kadu/Makefile.in
+++ b/kadu/Makefile.in
@@ -168,6 +168,7 @@ config_file.cpp \
 custom_input.cpp \
 debug.cpp \
 dnshandler.cpp \
+dockarea.cpp \
 emoticons.cpp \
 expimp.cpp \
 gadu.cpp \
@@ -196,6 +197,7 @@ status.cpp \
 tabbar.cpp \
 themes.cpp \
 toolbar.cpp \
+toolbutton.cpp \
 userbox.cpp \
 userinfo.cpp \
 userlist.cpp \
@@ -220,6 +222,7 @@ config_file.h \
 custom_input.h \
 debug.h \
 dnshandler.h \
+dockarea.h \
 emoticons.h \
 expimp.h \
 gadu.h \
@@ -247,6 +250,7 @@ status.h \
 tabbar.h \
 themes.h \
 toolbar.h \
+toolbutton.h \
 userbox.h \
 userinfo.h \
 userlist.h \
@@ -266,6 +270,7 @@ moc/color_selector_moc.cpp \
 moc/config_dialog_moc.cpp \
 moc/custom_input_moc.cpp \
 moc/dnshandler_moc.cpp \
+moc/dockarea_moc.cpp \
 moc/emoticons_moc.cpp \
 moc/expimp_moc.cpp \
 moc/gadu_moc.cpp \
@@ -289,6 +294,7 @@ moc/status_moc.cpp \
 moc/tabbar_moc.cpp \
 moc/themes_moc.cpp \
 moc/toolbar_moc.cpp \
+moc/toolbutton_moc.cpp \
 moc/userbox_moc.cpp \
 moc/userinfo_moc.cpp \
 moc/userlist_moc.cpp \
@@ -311,6 +317,7 @@ obj/config_file.$(OBJEXT) \
 obj/custom_input.$(OBJEXT) \
 obj/debug.$(OBJEXT) \
 obj/dnshandler.$(OBJEXT) \
+obj/dockarea.$(OBJEXT) \
 obj/emoticons.$(OBJEXT) \
 obj/expimp.$(OBJEXT) \
 obj/gadu.$(OBJEXT) \
@@ -339,6 +346,7 @@ obj/status.$(OBJEXT) \
 obj/tabbar.$(OBJEXT) \
 obj/themes.$(OBJEXT) \
 obj/toolbar.$(OBJEXT) \
+obj/toolbutton.$(OBJEXT) \
 obj/userbox.$(OBJEXT) \
 obj/userinfo.$(OBJEXT) \
 obj/userlist.$(OBJEXT) \
@@ -355,6 +363,7 @@ obj/color_selector_moc.$(OBJEXT) \
 obj/config_dialog_moc.$(OBJEXT) \
 obj/custom_input_moc.$(OBJEXT) \
 obj/dnshandler_moc.$(OBJEXT) \
+obj/dockarea_moc.$(OBJEXT) \
 obj/emoticons_moc.$(OBJEXT) \
 obj/expimp_moc.$(OBJEXT) \
 obj/gadu_moc.$(OBJEXT) \
@@ -378,6 +387,7 @@ obj/status_moc.$(OBJEXT) \
 obj/tabbar_moc.$(OBJEXT) \
 obj/themes_moc.$(OBJEXT) \
 obj/toolbar_moc.$(OBJEXT) \
+obj/toolbutton_moc.$(OBJEXT) \
 obj/userbox_moc.$(OBJEXT) \
 obj/userinfo_moc.$(OBJEXT) \
 obj/userlist_moc.$(OBJEXT) \
@@ -436,9 +446,9 @@ am__depfiles_maybe = depfiles
 @AMDEP_TRUE@	./$(DEPDIR)/config_dialog.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/config_file.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/custom_input.Po ./$(DEPDIR)/debug.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/dnshandler.Po ./$(DEPDIR)/emoticons.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/expimp.Po ./$(DEPDIR)/gadu-private.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/gadu.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/dnshandler.Po ./$(DEPDIR)/dockarea.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/emoticons.Po ./$(DEPDIR)/expimp.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/gadu-private.Po ./$(DEPDIR)/gadu.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/gadu_images_manager.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/gadu_rich_text.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/groups_manager.Po \
@@ -455,9 +465,9 @@ am__depfiles_maybe = depfiles
 @AMDEP_TRUE@	./$(DEPDIR)/protocols_manager.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/search.Po ./$(DEPDIR)/status.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/tabbar.Po ./$(DEPDIR)/themes.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/toolbar.Po ./$(DEPDIR)/updates.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/userbox.Po ./$(DEPDIR)/usergroup.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/userinfo.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/toolbar.Po ./$(DEPDIR)/toolbutton.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/updates.Po ./$(DEPDIR)/userbox.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/usergroup.Po ./$(DEPDIR)/userinfo.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/userlist-private.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/userlist.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/userlistelement.Po
@@ -531,6 +541,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/custom_input.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/debug.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dnshandler.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dockarea.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/emoticons.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/expimp.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gadu-private.Po@am__quote@
@@ -559,6 +570,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/tabbar.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/themes.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/toolbar.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/toolbutton.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/updates.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/userbox.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/usergroup.Po@am__quote@
