--- a/.config
+++ b/.config
@@ -289,6 +289,10 @@ module_screenshot=n
 # PL: Powiadamianie o zdarzeniach przy pomocy dymków typu OSD
 module_osdhints_notify=n
 
+# Description: Protection against unwanted chats
+# PL: Ochrona przed "klikaczami"
+module_firewall=n
+
 ############################################# ICONS ###########################################################################
 # PL: ####################################### IKONY ###########################################################################
 
