--- a/.config
+++ b/.config
@@ -287,6 +287,10 @@ module_osdhints_notify=n
 # PL: Ochrona przed "klikaczami"
 module_firewall=n
 
+# Description: Shows message, when user you're waiting for is online.
+# PL: Informuje o dostêpno¶ci kontaktu, na który czekamy.
+module_iwait4u=n
+
 ############################################# ICONS ###########################################################################
 # PL: ####################################### IKONY ###########################################################################
 
