iwait4u added to autodownload
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/branches/0.4@3628 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -285,6 +285,10 @@ module_screenshot=n
 # PL: Powiadamianie o zdarzeniach przy pomocy dymków typu OSD
 module_osdhints_notify=n
 
+# Description: Shows message, when user you're waiting for is online.
+# PL: Informuje o dostêpno¶ci kontaktu, na który czekamy.
+module_iwait4u=n
+
 ############################################# ICONS ###########################################################################
 # PL: ####################################### IKONY ###########################################################################
 
