--- a/modules/Makefile.in
+++ b/modules/Makefile.in
@@ -295,7 +295,8 @@ all:
 		if test -d translations; then \
 			cd translations && \
 			for trans in *.ts; do \
-				if [ ! -e $${trans//\ts/qm} ] || test $$trans -nt $${trans//\ts/qm}; then \
+				qm=`echo $${trans} | sed "s/\.ts/\.qm/"` && \
+				if [ ! -e $${qm} -o $$trans -nt $${qm} ]; then \
 					$(QT_LRELEASE_DIR)/lrelease $$trans; \
 				fi; \
 			done && \
